--- a/src/screens/TiberSynth/components/Visualization/Visualization.less
+++ b/src/screens/TiberSynth/components/Visualization/Visualization.less
@@ -1,6 +1,7 @@
 :local {
   .container {
     height: 100%;
+    overflow: hidden;
     width: 100%;
   }
 }
